<resources>
    <string name="app_name">NDPsong</string>
    <string name="song_title">Song Title</string>
    <string name="hintTitle">Enter song title here</string>
    <string name="singers">Singers</string>
    <string name="hintSinger">Enter singers\'s name here</string>
    <string name="year">Year</string>
    <string name="hintYear">Enter year of release here</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="stars">Stars</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">insert</string>
    <string name="show_list">show list</string>
    <string name="show_all_songs_with_5_stars">show all songs with 5 stars</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
</resources>