<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintTitle"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singers" />

    <EditText
        android:id="@+id/etSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintSinger"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintYear"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars" />

    <RadioGroup
        android:id="@+id/rgStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rBtnStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/rBtnStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/rBtnStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/rBtnStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/rBtnStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_list" />
    </LinearLayout>
</LinearLayout>